test/core/errors/extended_members_error/zs/extended_multiple_not_last_error.zs
package extended_multiple_not_last_error;

struct Extended
{
    uint32 field1;
    extend string field2;
    extend bytes field3;
    extend extern field4[];
    float32 field5;
};
